# pebook

./: .gitmodules  README.md  corrigendum.md
examples/: README.md
examples/chapter04/: README.md  calculate_dataset_result_tokens.py  calculate_llm_throughput_limits.py  llama3-inference-vllm.py  llama3-inference.py  pyproject.toml  sync.sh
examples/chapter05/: README.md  analyze_study.py  calculate_dataset_result_tokens.py  optimize.py  requirements.txt  run.sh  run_optimize_template.sh  train.py  train_6_2_prepare.py  train_without_memcallback.py
examples/chapter05/configs/: ds_config_optimize_template.json
examples/chapter06/: README.md  fix_convert.patch  profiling.sh  sgd.patch  train_70b.sh  train_70b_gbs128_adam.sh  train_70b_gbs128_adam_nsys.sh  train_70b_gbs128_adam_torchprof.sh  train_70b_gbs128_adam_tuned.sh  train_70b_gbs128_adam_tuned_nsys.sh  train_70b_gbs128_adam_tuned_torchprof.sh
examples/chapter07/: .gitignore  Dockerfile  README.md  compose.yml  data  pyproject.toml  run.sh  setup.sh
examples/chapter07/.devcontainer/: devcontainer.json
examples/chapter07/pe_BEVFusion/: __init__.py
examples/chapter07/pe_BEVFusion/bevfusion/: __init__.py  bevfusion.py  depth_lss.py  gaussian.py  transfusion_head.py
examples/chapter07/pe_BEVFusion/bevfusion/ops/src/: pe_voxelization_cuda.cu
examples/chapter07/pe_BEVFusion/configs/: bevfusion_lidar-cam_pe.py
examples/chapter07/pe_BEVFusion/datasets/: __init__.py  nvtx_dataset.py
examples/chapter07/pe_BEVFusion/hooks/: __init__.py  nvtx_hook.py  torch_profiler_hook.py
examples/chapter08/: README.md
(+14 files in other folders)
