[project]
name = "chapter04-inference"
version = "0.1.0"
description = "LLM inference benchmarking tools for Chapter 4 of the book."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets>=4.1.1",
    "llmcompressor>=0.3.0",
    "tensorboard>=2.20.0",
    "torch==2.8.0",
    "torch-tb-profiler>=0.4.3",
    "transformers>=4.57.0",
    "vllm>=0.11.0",
]

[tool.uv.sources]
torch = [
    { index = "torch-cu128" },
]

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
