[project]
name = "ch8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.26.3",
    "markupsafe==2.1.5",
    "openmim>=0.3.9",
    "torch==2.1.0+cu118",
    "torchvision==0.16.0+cu118",
    "tqdm>=4.66.5",
    "mpi4py>=4.1.0",
    "numba>=0.61.2",
    "psutil>=7.0.0",
    "torchpack>=0.3.1",
    "setuptools<70",
    "nvtx==0.2.13",
    "scikit-learn==1.8.0",
    "lyft-dataset-sdk==0.0.8",
]

[tool.uv]
index-strategy = "unsafe-first-match" # for setuptools<70
extra-index-url = ["https://download.pytorch.org/whl/cu118"]

[tool.pyright]
exclude = ["data/**","mmdetection3d/data/**","**/.git/**","**/build/**","**/work_dirs/**"]
